third_party/rust/uniffi/tests/ui/proc_macro_arc.stderr
error[E0277]: the trait bound `Foo: FfiConverterArc<UniFfiTag>` is not satisfied
  --> tests/ui/proc_macro_arc.rs:10:1
   |
10 | #[uniffi::export]
   | ^^^^^^^^^^^^^^^^^ the trait `FfiConverterArc<UniFfiTag>` is not implemented for `Foo`, which is required by `Arc<Foo>: LowerReturn<UniFfiTag>`
   |
   = help: the trait `LowerReturn<UT>` is implemented for `Arc<T>`
   = note: required for `Arc<Foo>` to implement `FfiConverter<UniFfiTag>`
   = note: required for `Arc<Foo>` to implement `Lower<UniFfiTag>`
   = note: required for `Arc<Foo>` to implement `LowerReturn<UniFfiTag>`
   = note: this error originates in the attribute macro `uniffi::export` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: FfiConverterArc<UniFfiTag>` is not satisfied
  --> tests/ui/proc_macro_arc.rs:11:18
   |
11 | fn make_foo() -> Arc<Foo> {
   |                  ^^^^^^^^ the trait `FfiConverterArc<UniFfiTag>` is not implemented for `Foo`, which is required by `Arc<Foo>: uniffi::TypeId<UniFfiTag>`
   |
   = help: the trait `uniffi::TypeId<UT>` is implemented for `Arc<T>`
   = note: required for `Arc<Foo>` to implement `FfiConverter<UniFfiTag>`
   = note: required for `Arc<Foo>` to implement `uniffi::TypeId<UniFfiTag>`

error[E0277]: the trait bound `child::Foo: FfiConverterArc<UniFfiTag>` is not satisfied
  --> tests/ui/proc_macro_arc.rs:20:5
   |
20 |     #[uniffi::export]
   |     ^^^^^^^^^^^^^^^^^ the trait `FfiConverterArc<UniFfiTag>` is not implemented for `child::Foo`, which is required by `Arc<child::Foo>: Lift<UniFfiTag>`
   |
   = help: the trait `Lift<UT>` is implemented for `Arc<T>`
   = note: required for `Arc<child::Foo>` to implement `FfiConverter<UniFfiTag>`
   = note: required for `Arc<child::Foo>` to implement `Lift<UniFfiTag>`
   = note: this error originates in the attribute macro `uniffi::export` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `child::Foo: FfiConverterArc<UniFfiTag>` is not satisfied
  --> tests/ui/proc_macro_arc.rs:21:22
   |
21 |     fn take_foo(foo: Arc<Foo>) {
   |                      ^^^^^^^^ the trait `FfiConverterArc<UniFfiTag>` is not implemented for `child::Foo`, which is required by `Arc<child::Foo>: uniffi::TypeId<UniFfiTag>`
   |
   = help: the trait `uniffi::TypeId<UT>` is implemented for `Arc<T>`
   = note: required for `Arc<child::Foo>` to implement `FfiConverter<UniFfiTag>`
   = note: required for `Arc<child::Foo>` to implement `uniffi::TypeId<UniFfiTag>`
